fix: update config to use @ConfigMapping since the Optional properties were not working